objects/kugo2p__AccountPricing__c.object
<CustomObject>
    <description>Kugamon - Related object to Salesforce Account that captures Product Pricing.</description>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <description>Lookup to the Account Name.</description>
        <inlineHelpText>Lookup to the Account Name</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>Account_Pricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Contract.</description>
        <inlineHelpText>Lookup to the related Contract</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>Account_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateEnd__c</fullName>
        <description>Date Account Pricing Expires</description>
        <inlineHelpText>Date Account Pricing Expires</inlineHelpText>
        <label>Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateStart__c</fullName>
        <description>Date Account Pricing Commences</description>
        <inlineHelpText>Date Account Pricing Commences</inlineHelpText>
        <label>Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__Discount__c</fullName>
        <description>Default Line Discount in Quote and Order configurator page. Use either this field or Price, but not both.</description>
        <inlineHelpText>Default Line Discount in Quote and Order configurator page. Use either this field or Price, but not both.</inlineHelpText>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__FilterField__c</fullName>
        <description>Field API Name used for filter. Filter function ignored if Product/Service field is filled.</description>
        <inlineHelpText>Field API Name used for filter. Filter function ignored if Product/Service field is filled.</inlineHelpText>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__FilterObject__c</fullName>
        <description>Object used for filter. Filter function ignored if Product/Service field is filled.</description>
        <inlineHelpText>Object used for filter. Filter function ignored if Product/Service field is filled.</inlineHelpText>
        <label>Filter Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Additional Product Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__FilterValue__c</fullName>
        <description>Value the Filter Field is evaluated against to determine if Account Pricing applies.</description>
        <inlineHelpText>Value the Filter Field is evaluated against to determine if Account Pricing applies.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Product&apos;s Hide value. Hides Product from Quote and Order configurator page. If Hide is Checked, Pricing Information (Price or Discount) is not required.</description>
        <inlineHelpText>Override Product&apos;s Hide value. Hides Product from Quote and Order configurator page. If Hide is Checked, Pricing Information (Price or Discount) is not required.</inlineHelpText>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsActive__c</fullName>
        <description>Active if Date End is Blank, or Today is within Date Start and Date End, or the Related Contract is Activated with Today is within Start Date and End Date.</description>
        <formula>AND(
  OR(
    kugo2p__Type__c = &quot;Product/Service&quot;,
    kugo2p__Type__c = &quot;Filter&quot;
  ),
  OR(
    AND(
      ISBLANK(kugo2p__Contract__c),
      ISBLANK(kugo2p__DateStart__c),
      ISBLANK(kugo2p__DateEnd__c)
    ),
    AND(
      ISBLANK(kugo2p__Contract__c),
      kugo2p__DateStart__c &lt;= Today(),
      ISBLANK(kugo2p__DateEnd__c)
    ),
    AND(
      ISBLANK(kugo2p__Contract__c),
      ISBLANK(kugo2p__DateStart__c),
      kugo2p__DateEnd__c &gt;= Today()
    ),
    AND(
      ISBLANK(kugo2p__Contract__c),
      kugo2p__DateStart__c &lt;= Today(),
      kugo2p__DateEnd__c &gt;= Today()
    ),
    AND(
      TEXT(kugo2p__Contract__r.Status) = &apos;Activated&apos;,
      OR(
        AND(
          ISBLANK(kugo2p__Contract__r.StartDate),
          ISBLANK(kugo2p__Contract__r.EndDate)
        ),
        AND(
          kugo2p__Contract__r.StartDate &lt;= Today(),
          kugo2p__Contract__r.EndDate &gt;= Today()
        )
      )
    )
  )
)</formula>
        <inlineHelpText>Active if Date End is Blank, or Today is within Date Start and Date End, or the Related Contract is Activated with Today is within Start Date and End Date</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockLineDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Product&apos;s Lock Line Discount value. Prevents Line Discount to be editable in Quote and Order configurator page. Does not lock the Line Discount at the record level.</description>
        <inlineHelpText>Override Product&apos;s Lock Line Discount value. Prevents Line Discount to be editable in Quote and Order configurator page. Does not lock the Line Discount at the record level.</inlineHelpText>
        <label>Lock Line Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LockSalesPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Override Product&apos;s Lock Sales Price value. Prevents Sales Price to be editable in Quote and Order configurator page. Does not lock the Sales Price at the record level.</description>
        <inlineHelpText>Override Product&apos;s Lock Sales Price value. Prevents Sales Price to be editable in Quote and Order configurator page. Does not lock the Sales Price at the record level.</inlineHelpText>
        <label>Lock Sales Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Operator__c</fullName>
        <description>Operator used to evaluate Filter Field value against Filter Value.</description>
        <inlineHelpText>Operator used to evaluate Filter Field value against Filter Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Price__c</fullName>
        <description>Default Price in Quote and Order configurator page. Use either this field or Discount, but not both.</description>
        <inlineHelpText>Default Price in Quote and Order configurator page. Use either this field or Discount, but not both.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Product/Service. Alternately, Filter function can be used, but not both.</description>
        <inlineHelpText>Lookup to the Product/Service. Alternately, Filter function can be used, but not both.</inlineHelpText>
        <label>Product/Service</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>Account_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Type__c</fullName>
        <description>Account Pricing can either be Product/Service or Filter.</description>
        <formula>IF(
  NOT(ISBLANK(kugo2p__ProductService__c)),
  &quot;Product/Service&quot;,
  IF(
    AND(
      NOT(ISBLANK(TEXT(kugo2p__FilterObject__c))),
      NOT(ISBLANK(kugo2p__FilterField__c)),
      NOT(ISBLANK(TEXT(kugo2p__Operator__c)))
    ),
    &quot;Filter&quot;,
    &quot;Not Configured&quot;
  )
)</formula>
        <inlineHelpText>Account Pricing can either be Product/Service or Filter</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Account Pricing</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__Type__c</columns>
        <columns>kugo2p__ProductService__c</columns>
        <columns>kugo2p__Price__c</columns>
        <columns>kugo2p__Discount__c</columns>
        <columns>kugo2p__FilterObject__c</columns>
        <columns>kugo2p__FilterField__c</columns>
        <columns>kugo2p__Operator__c</columns>
        <columns>kugo2p__FilterValue__c</columns>
        <columns>kugo2p__Contract__c</columns>
        <columns>kugo2p__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Account Pricing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__FilterCheck</fullName>
        <active>true</active>
        <description>If Filter function is used, Account Pricing requires Filter fields filled</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK(kugo2p__FilterField__c)),
  OR(
    ISBLANK(TEXT(kugo2p__FilterObject__c)),
    ISBLANK(TEXT(kugo2p__Operator__c))
  )
)</errorConditionFormula>
        <errorMessage>You must enter Filter Object, Filter Field and Operator fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__PriceDiscountCheck</fullName>
        <active>true</active>
        <description>Account Pricing requires either Price or Discount</description>
        <errorConditionFormula>AND(
  kugo2p__Hide__c = FALSE,
  OR(
    AND(
      ISBLANK(kugo2p__Price__c),
      ISBLANK(kugo2p__Discount__c)
    ),
    AND(
      NOT(ISBLANK(kugo2p__Price__c)),
      NOT(ISBLANK(kugo2p__Discount__c))
    )
  )
)</errorConditionFormula>
        <errorMessage>You must enter either Price or Discount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__ProductFilterCheck</fullName>
        <active>true</active>
        <description>Account Pricing requires either Product/Service or Filter</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK(kugo2p__ProductService__c)),
  OR(
    NOT(ISBLANK(TEXT(kugo2p__FilterObject__c))),
    NOT(ISBLANK(kugo2p__FilterField__c)),
    NOT(ISBLANK(TEXT(kugo2p__Operator__c)))
  )
)</errorConditionFormula>
        <errorMessage>You must enter either Product/Service or Filter Information</errorMessage>
    </validationRules>
</CustomObject>